# dbghaplo

./: Cargo.toml  README.md
.github/workflows/: release.yml
hiv_test/: 3000_95_3.bam  3000_95_3.bam.bai  3000_95_3.vcf.gz.tbi  OR483991.1.fasta  OR483991.1.fasta.fai
scripts/: haplotag_bam  run_dbghap_pipeline  tag.py  write_contig_headers_vcf.py
src/: alignment.rs  consensus.rs  constants.rs  dbg.rs  file_reader.rs  file_writer.rs  ids.txt  lib.rs  parse_cmd_line.rs  types_structs.rs  utils_frags.rs
